/* If you are a beginner */

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -1,10 +1,12 @@
 The Openmoko Wiki is open. Everyone can join and edit its content. For doing this you will have to [http://wiki.openmoko.org/index.php?title=Special:Userlogin&type=signup register]. Join our wiki, edit the wiki, contribute valued content, and help others. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].  
 
 ==If you are a beginner==
-People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes.
-If you are new to wiki editing, please read:
+People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. Then some move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. At this stage, one may want to look at:
+
+[http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
+
+To go further:
 * [[Openmoko Wiki Editing Guidelines]] 
-* [http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
 * [[Help:Editing]]
 
 ==If you add a new page==
