--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -43,6 +43,13 @@ after that you will need to restart the framework (kill the process and start it
 ** Go to the bluetooth preferences and choose 'Add a new device';
 ** Choose the neo (default name is  'BlueZ (0)') and choose 'no password';
 
+===Using custom keys===
+* The keys bellow don't exist by default in the Illume/qtopia keyboard's, to add the keys to a profile you have to write it.
+  Allowed Keys:
+   f1-f12
+   win (plus any letter or number, small bug with f key in the last package)
+
+
 ===Using Gestures===
 * To use [[gestures]] to send events, you just need to install the gestures package (no need to start the gestures listener). You can also train the gestures.
 
