/* If you are a beginner */

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -1,11 +1,9 @@
 The Openmoko Wiki is open. Everyone can join and edit its content. For doing this you will have to [http://wiki.openmoko.org/index.php?title=Special:Userlogin&type=signup register]. Join our wiki, edit the wiki, contribute valued content, and help others. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].  
 
-==If you are a beginner==
-People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. Then some move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. At this stage, one may want to look at:
+People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. Then some move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. Don't worry about being incomplete or about fine-tuning the language. Wiki means "fast" in Hawaïan, so if you have any information to share, go for it !
 
-[http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
-
-To go further:
+These pages explain how to format text:
+* [http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
 * [[Openmoko Wiki Editing Guidelines]] 
 * [[Help:Editing]]
 
