--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -2,31 +2,24 @@ The Openmoko Wiki is open. Everyone can join and edit its content. For doing thi
 
 People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. Then some move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. Don't worry about being incomplete or about fine-tuning the language. Wiki means "fast" in Hawaïan, so if you have any information to share, go for it !
 
-These pages explain how to format text:
+
+==Tips for advanced wiki editors==
+
+'''Reformat !''' these pages explain how to write and format text the Mediawiki way:
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
 * [[Openmoko Wiki Editing Guidelines]] 
 * [[Help:Editing]]
-
-==If you add a new page==
-If you create a new wiki page, please visit [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to see the available categories and please put your page on the right category. This will make it easier for wiki users to find your page.
-
-==Where to help==
-You can see [[Wiki Maintenance Agenda]] and [[Wiki Issues]]. You can also help by [[Translation|translating]] this wiki to other languages.
-
-==Coordinate with other editors of Openmoko wiki==
-If you are interested in helping improve our wiki, please join the [https://lists.openmoko.org/mailman/listinfo/documentation documentation mailing list] to coordinate ideas and work with other wiki editors. Visit [[Wiki Maintainers]] to learn about the wiki maintainers, a team of community volunteers who have committed to working with the Openmoko team to improve the wiki in particular and all documentation in general.
-
-== Editor's tools ==
-
-* [[Templates]] - Templates with examples
-* [[Special:Categories]] - List of existing categories
-* [[Special:Specialpages]] - List and find various content
-
-
-
-== Language tools ==
-
 * Strunk's [http://www.crockford.com/wrrrld/style.html Elements of Style]. Knowing these 18 rules of good style is a must for anybody writing in English.
 * [http://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style Wikipedia's Manual of Style]
+
+'''Translate !''' You can help by [[Translation|translating]] this wiki to other languages.
+
+'''Coordinate !''' There are many tasks awaiting you listed in the [[Wiki Maintenance Agenda]] and [[Wiki Issues]]. If you are interested in helping improve our wiki, please join the [https://lists.openmoko.org/mailman/listinfo/documentation documentation mailing list] to coordinate ideas and work with other wiki editors. Visit [[Wiki Maintainers]] to learn about the wiki maintainers, a team of community volunteers who have committed to working with the Openmoko team to improve the wiki in particular and all documentation in general.
+
+'''Categorize !''' If you create a new wiki page, please visit [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to see the available categories and please put your page on the right category. This will make it easier for wiki users to find your page. There is a dynamic [[Special:Categories| List of existing categories]].
+
+'''Organize !'. In addition to making "List of #" pages, and categorizing, advanced editors will use the 'toolbox' in the left column and:
+* [[Templates]] - Templates with examples
+* [[Special:Specialpages]] - List and find various content
 
 [[Category:Community]]
