Full page reformat

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -18,8 +18,8 @@ People usually start editing a wiki by fixing small things, like obvious grammar
 
 '''Categorize !''' If you create a new wiki page, please visit [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to see the available categories and please put your page on the right category. This will make it easier for wiki users to find your page. There is a dynamic [[Special:Categories| List of existing categories]].
 
-'''Organize !'''. In addition to making "List of #" pages, and categorizing, advanced editors will use the 'toolbox' in the left column and:
-* [[Templates]] - Templates with examples
-* [[Special:Specialpages]] - List and find various content
+'''Tag !''' In addition to making "List of #" pages, and categorizing, templates provide a powerful way to annotate pages quickly and visibly. See [[Templates]] - Templates with examples
+
+'''Explore !''' The 'toolbox' in the left column allows to browse the wiki faster. For example [[Special:Specialpages]] - List and find various content.
 
 [[Category:Community]]
