--- a/Getting_Openmoko.mw
+++ b/Getting_Openmoko.mw
@@ -1,3 +1,5 @@
+{{languages}}
+
 If you want a phone that runs Openmoko you can either buy the [[Neo FreeRunner]] or you can install Openmoko on a [[Openmoko-supported hardware|supported device]]. Note that much of the software is still under development and not suited for regular users yet. For learning about what you can and cannot do with the current types of software please see [[Distributions#Features by distribution/release target|Features of the distributions]].
 
 ==Buying Neo FreeRunner==
