*Empty MediaWiki Message*

--- a/Getting_Openmoko%2Fes.mw
+++ b/Getting_Openmoko%2Fes.mw
@@ -1,3 +1,5 @@
+{{languages|Getting Openmoko}}
+
 Si quiere un teléfono capaz de ejecutar [[Openmoko/es|Openmoko]] tienes la opción de comprar un [[Neo FreeRunner/es|Neo FreeRunner]] o puedes instalar Openmoko en un [[Openmoko-supported hardware/es| dispositivo compatible]]. Ten en cuenta que este software esta todavía en desarrollo y no es apto para el usuarios medio. Para saber lo que puedes hacer y lo que no con el software comprueba las [[Distributions#Features by distribution/release target|funcionalidades de las diferentes distribuciones]].
 
 ==Comprar un Neo FreeRunner==
