--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -1,7 +1,8 @@
-The Openmoko Wiki is open. Everyone can join and edit its content. For doing this you will have to [http://wiki.openmoko.org/index.php?title=Special:Userlogin&type=signup register]. Join our wiki, edit the wiki, contribute valued content, and help others. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].  
+The Openmoko Wiki is open. YOU can edit its content.
 
-People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. Then some move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. Don't worry about being incomplete or about fine-tuning the language. Wiki means "fast" in Hawaïan, so if you have any information to share, go for it !
+People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. If you spot one, click on the '''edit''' tab, [http://wiki.openmoko.org/index.php?title=Special:Userlogin&type=signup register] by creating an account on the wiki, and you are set up to share and help others.
 
+Then some people move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. Don't worry about being incomplete or about fine-tuning the language. Wiki means "fast" in Hawaïan, so if you have any information to share, go for it !
 
 ==Tips for advanced wiki editors==
 
@@ -20,6 +21,6 @@ People usually start editing a wiki by fixing small things, like obvious grammar
 
 '''Tag !''' In addition to making "List of #" pages, and categorizing, templates provide a powerful way to annotate pages quickly and visibly. See [[Templates]] - Templates with examples
 
-'''Explore !''' The 'toolbox' in the left column allows to browse the wiki faster. For example [[Special:Specialpages]] - List and find various content.
+'''Explore !''' The 'toolbox' in the left column allows to browse the wiki faster. For example [[Special:Specialpages]] - List and find various content. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].
 
 [[Category:Community]]
