/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -78,6 +78,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Direct.openmoko.com order process]] || outdated, is about the old webshop || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Bootcharts]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Community Member of the Week]] || not used anymore since April || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
