--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -82,6 +82,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Community Member of the Week]] || not used anymore since April || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Community nominees for GTA02 P0]] || outdated, not needed anymore || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Config Options]] || little content, not maintained || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
