--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -38,6 +38,9 @@ Qtopia based mapping widget. Displays maps and custom data, also other widgets c
 [[TangoGPS]] <br>
 mapping program. Downloads maps on demand and caches them, very efficient. '''Works very well.'''
 
+[[gpsdrive]] <br/>
+GpsDrive is a car (bike, ship, plane) navigation system. GpsDrive displays your position provided from your GPS receiver on a zoomable map. The maps are autoselected for best resolution depending of your position and can be downloaded from the Internet. Speech output is supported if the "festival" software is running. All GPS receivers supported by gpsd should be usable. more at [http://www.gpsdrive.de/ homepage]
+
 == Use cases ==
 
 * I want to look at maps. 
