*Empty MediaWiki Message*

--- a/IPhone%2Ffr.mw
+++ b/IPhone%2Ffr.mw
@@ -29,7 +29,7 @@ Demonstration de l'interface utilisateur de l'iPhone sur youtube http://youtube.
  |Stockage
  |4 or 8 Go (Pas extensible, pas de carte mémoire)
  |[http://lists.openmoko.org/pipermail/announce/2007-June/000013.html 256Mo]
-Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_Card/551-81172-581.html 8 Go microSD]
+Expandable with [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_Card/551-81172-581.html max. 8Go microSDHC]
  |-
  |CPU
  |[http://www.arm.com/products/CPUs/ARM1176.html ARM1176JZF-S™] (avec Coprocesseur) (Source: [http://www.bitsundso.de/ Bits und so Podcast] [http://www.bitsundso.de/bus20/54/ #20], 8'40" to 9'30" [en Allemand])
