--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -53,7 +53,7 @@ For more details, see the [[Om 2008.8 Guide]] and the [[Om2008.8 Feature Plan|Om
 To install the Om2008.8 "stable" distribution on the Neo FreeRunner:
 * As explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page, download the Root Filesystem ([http://downloads.openmoko.org/releases/Om2008.8-update/20080826-asu-stable-rootfs.jffs2 20080826-asu-stable-rootfs.jffs2], 68M) and the Kernel ([http://downloads.openmoko.org/releases/Om2008.8-update/20080826-asu-stable-uImage.bin 20080826-asu-stable-uImage.bin], 1.8M) image files (links as of 2008/08/26 for the updated "stable" release of 2008.8, see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
 * Download and install the [[dfu-util]] software for your architecture.
-* It's backup time !
+* It's [[Pre-Flash_Backup|backup]] time !
 * Using dfu-util, [[Flashing the Neo FreeRunner|flash]] the two images in the appropriate partitions of the Neo FreeRunner. Alternatively, you may test the distribution by installing it on the microSD card and [[Booting from SD | boot from microSD card]].
 * Since you just wiped out /etc, /root  and /users, you may want to reconfigure a few things, like /etc/resolv.conf (see below). For security, you may want to set a root password, add a non-root user and transfer ~/.ssh/authorized_keys and so on.
 * Reinstall your favorite applications.
