how to turn off predictive mode

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -52,6 +52,11 @@ All steps can be done automatically with this shell-script: [http://paste.ubuntu
 
 If you have problems with illume crashing, make sure that you don't have a copy of the original ASU Default.kbd file laying around (the one with the predictive dictionary).
 
+== Predictive mode ==
+
+To turn off predictive mode just put ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into  ''/etc/X11/Xsession.d/89Qtopia''
+
+
 == Debate ==
 Some people doesn't like this keyboard, because it lacks a full Qwerty keyboard. Another issue people have, is they can't switch the keyboard prediction off.
 {{main|Keyboard_Debate}}
