--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -15,6 +15,9 @@
 
 ===Install Instructions===
 
+*'''ReMoko dependencies'''
+**bluez-utils (>= 3.3) remokoserver python-ecore python-edbus python-edje python-evas python-dbus python-textutils
+
 *'''FSO Milestone 2'''
 ** The FSO images built before 20080807 have a bug in the framework bluetooth system, to use remoko in a older FSO image you will need to change the lines below in '/usr/lib/python2.5/site-packages/framework/subsystems/ousaged/generic.py':
 
