--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -76,6 +76,7 @@ after that you will need to restart the framework (kill the process and start it
 
 
 ===Known Issus===
+* The installer is a little bit broken at the moment, so check all the ReMoko dependencies, for Om 2008.8 the package: python-textutils should be the only dependence missing by default.
 * In some images (last FSO) the keyboard only show up, if the app is in window mode;
 * The mouse profile can slow down a little bit if you have the gestures daemon and other program running on the phone. 
 * Connection problems with Symbian S60 devices with BT-HID keyboard app provided by Nokia;
