--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -31,13 +31,13 @@ How to change the keyboards layout ?
 How to change the dictionnary used by the predictive keyboards ?
 
 == Your short-term options ==
+[[Image:Assume_good_faith_lolcat.jpg|thumb|Even if things might look bad, you shouldn't assume that they are]]
 
 * Live with it, let go (for a while) the desire to use the terminal locally, login remotely via ssh when you need.
 * Get an external keyboard, USB or Bluetooth, light and foldable if you want.
 * Switch to 2007.2, FSO or Debian.
 * Recompile Qtopia and provide a package.
 PS: Complaining that management does not listen to the users needs is not a productive option.
-{{todo|find a cartoon to add humor here, the debate can use some relaxation}}
 
 == Perspectives for long-term resolution ==
 
