--- a/OMView.mw
+++ b/OMView.mw
@@ -14,7 +14,7 @@ Then place the edj at "/usr/share/ewl/themes/e17.edj". It is a modified ewl them
 
 * Omview has three modes: directory view, thumbnail view, and fullscreen image view.
 * It understands five touchpad gestures: right, up, left, down, click. To use these just move your finger or stylus for at least 100px in one direction.
-* In fullscreen view images are automatically scaled and rotated. Not by exif data or somthing like that but only by image dimensions, so that an image takes as much space on the screen while beeing fully visible. This means landscape images are rotated, portait images are left the way they are.
+* In fullscreen view images are automatically scaled and rotated. Not by exif orientation data but only by image dimensions, so that an image takes as much space on the screen while beeing fully visible. This means landscape images are rotated, portait images are left the way they are.
 
 Directory and thumbnail view always show 6 items at the same time with the other items beeing on the previous/next pages. The statusbar on the bottom shows the path and below the subdirectory count/file count/page
 {| border=1 cellspacing=0 cellpadding=4
