--- a/Biking.mw
+++ b/Biking.mw
@@ -6,7 +6,8 @@ André Gaul documented a complete mounting kit [http://andre.web-yard.de/blog/20
 
 It's just a prototype :) but with some foam around the handlebar and careful positioning to avoid bumps, a basic attachment like this might work [http://www.xmission.com/~bmidgley/neobike.jpg] and makes it easy to "pinch" the screen when you need to finger tap something.
 
-== Crank up the charge ==
+== Power Supply ==
+=== Crank up the charge ===
 
 If you want to keep the GPS running and have the screen always on or staying on with a long timeout, you'll need a way to supplement power.
 
@@ -14,16 +15,16 @@ If you decide to try solar, it's recommended to get a flexible panel and attach 
 
 The alternative is to steal energy from the crank. You can do this with a hub dynamo. It might work with an dynamo outside the hub like the one on the reelight [http://www.reelight.com]--it looks like their coil produces only 3vAC so it makes sense to use a custom coil.
 
-== Charging via hub ==
+=== Charging via hub ===
 Connecting a hub ("Nabendynamo" [http://nabendynamo.de/]) like the SON [http://www.peterwhitecycles.com/schmidt.asp] to a self-made or prebuilt charger could supply your device while biking.
 
 The Freerunner has three different [[Forcing_fast_charge_mode|charging modes]]: 100mA, 500mA and 1A. 100mA seems to be too low, as it is said, that the Freerunner draws 100mA current even when it is switched off. A hub dynamo provides 500mA. If you want to use your lights while charging you need to connect the lights in series to the charger. At least the SON will increase the voltage and still delivers the same current. But you need a bypass circuit in case of less current draw of the charger when the battery is full.
 
-=== pre-built chargers ===
+==== pre-built chargers ====
 * Zzing [http://zzing.de/English_Zzing/]
 * JaWeTec Bike Charger [http://www.jawetec.de/index.php?content=bikecharger&framing=radsport]
 
-=== self-made chargers ===
+==== self-made chargers ====
 * Article (German) in c't 23/2007, page 190 [http://www.heise.de/kiosk/archiv/ct/07/23/190]
 * maybe 6V "Forumslader" [http://www.forumslader.de/6V-Version-des-Rad-Forum-Ladegeraets.125.0.html] (You need at least one diode in series to be within the maximum ratings of the power managment IC and the FET switches in FreeRunner.)
 * Makela [http://www.iki.fi/~msmakela/electronics/dynamo5v/] 
@@ -34,8 +35,7 @@ Linear regulator above might be replaced with [http://www.dimensionengineering.c
 
 * [[TangoGPS]], + [http://blogs.thehumanjourney.net/finds/entry/20080826 OSM Cycle data]
 * [[Navit]]
-* [[Installing Pyroute|Pyroute]]
-* [http://wiki.openstreetmap.org/index.php/Rana Rana]
+* [http://wiki.openstreetmap.org/index.php/Rana Rana] uses [[Installing Pyroute|Pyroute]]
 
 == See also ==
 
