--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -69,6 +69,8 @@ for AT+COPS
 |-
 | 71234 || O || 4022 || blazing 3G fireball || WalMart/RadioShack $18 Cingular Go phone package. This chip was also given with a contract plan. (Three confirmed working.)[17 July 08 confirmed 4th working w/Family 500 anytime]
 |-
+| 71234 || O || 4022 || blazing 3G fireball || RadioShack $15 AT&T Go phone package. Also had to purchase minimum $15 of minutes. Works great out of box no problems. (August 19, 2008)
+|-
 | 71234 || O || 4022 || blazing 3G fireball || Two more confirmed working with FreeRunner.  Previous 4021 chip did not work properly.
 |-
 | 71234 || O || 4022 || blazing 3G fireball || It only partially worked, at first. (I had reception, but it always said "Registering..." in the upper-left of the screen.) After wiggling the sim card slightly, and rebooting the phone, it eventually changed from &quot;Registering&quot; to &quot;AT&amp;T&quot;.
