/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -84,6 +84,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Community nominees for GTA02 P0]] || outdated, not needed anymore || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Config Options]] || little content, not maintained || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Neo 1973 Phase 1]] || outdated, unfinished page || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
