/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -86,6 +86,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Config Options]] || little content, not maintained || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Neo 1973 Phase 1]] || outdated, unfinished page || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Developer preview]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
