/* Possible new order(s) */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -428,11 +428,8 @@ See also [[Openmoko Local Groups: Finland]], if you're interested.
 
 === Possible new order(s) ===
 
-Status: 8/10
+Status: 5/10<br />
 These did not participate in the pulster.de order(s) shown below.
-
-Oulu:
-* Mikko Värri, vmj AT linuxbox DOT fi [ordering for 3]
 
 Helsinki:
 * Jerry Jalava <br /> jerry DOT jalava AT iki DOT fi
@@ -440,7 +437,7 @@ Helsinki:
 
 Turku:
 
-* Jaakko Lehtinen, jaakko dot lehtinen at gmail dot com
+* Jaakko Lehtinen <br /> jaakko dot lehtinen at gmail dot com
 
 Pulster.de now sells individual phones at 329€/phone, but 10-packs at 299€/phone.
 
