--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -4,7 +4,7 @@
 
 == Summary of the problem ==
 
-Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primarily designed to compose SMS in English. This keyboard is very impractical to use with a terminal or enter an URL. [http://lists.openmoko.org/pipermail/support/2008-August/002184.html According to Raster] it cannot be turned off, [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html short of recompiling qpe] of course.
+Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primarily designed to compose SMS in English. This keyboard is very impractical to use with a terminal or enter an URL.
 
 [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html More details...]
 
@@ -29,6 +29,8 @@ How to have a toggle button to make the keyboard appear/disappear ?
 How to change the keyboards layout ?
 
 How to change the dictionnary used by the predictive keyboards ?
+
+How to turn off Qtopia keyboard ? According to [http://docs.openmoko.org/trac/ticket/1864| Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89Qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
 
 == Your short-term options ==
 [[Image:Assume_good_faith_lolcat.jpg|thumb|Even if things might look bad, you shouldn't assume that they are]]
