--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -28,7 +28,9 @@ How to have a toggle button to make the keyboard appear/disappear ?
 
 How to change the keyboards layout ?
 
-How to change the dictionnary used by the predictive keyboards ?
+How to change the dictionary used by the predictive keyboards ?
+
+How to toggle the predictive mode on and off ?
 
 How to turn off Qtopia keyboard ? According to [http://docs.openmoko.org/trac/ticket/1864| Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89Qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
 
