*Empty MediaWiki Message*

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -88,6 +88,10 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Neo 1973 Phase 1]] || outdated, unfinished page || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Developer preview]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[ETel]] and [[Talk:ETel]] || is about a past event || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Finger Scrolling]] and [[Talk:Finger Scrolling]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
