--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -345,7 +345,7 @@ It works the following way:
  CRC error: expected 0xc33e35fc, got 0x93097bfb
 * In this case jut add a additional argument to the command line - that has to be the 1st argument, though, and that contains the size information we got from the warning:
  ./envedit.pl -s 262144 -i env.in -D GTA02 -f environment.in  -o env.out
-* Now the perl script should no more output anything but write a new u-boot_env partition that we can upload to the device by:
+* Now the perl script should produce no more output anything but write a new u-boot_env partition that we can upload to the device by:
  dfu-util -a u-boot_env -R -D env.out
 
 == Device Firmware Upgrade ==
