/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -92,6 +92,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[ETel]] and [[Talk:ETel]] || is about a past event || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Finger Scrolling]] and [[Talk:Finger Scrolling]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Finger Toolbar]] and [[Talk:Finger Toolbar]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
