/* Summary of the problem */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -6,9 +6,7 @@
 
 Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primarily designed to compose SMS in English. This keyboard is very impractical to use with a terminal or enter an URL.
 
-[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html More details...]
-
-List of all [https://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&summary=~keyboard&order=priority keyboard bugs in the defect tracking system].
+[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p780454.html More details...], list of all [https://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&summary=~keyboard&order=priority keyboard bugs in the defect tracking system].
 
 == List of available keyboards ==
 
