/* Comparaison entre iPhone Apple et the "Open Source iPhone" Neo1973 (GTA02) fonctionne sous Openmoko Linux */

--- a/IPhone%2Ffr.mw
+++ b/IPhone%2Ffr.mw
@@ -1,5 +1,5 @@
 == Comparaison entre iPhone Apple et the "Open Source iPhone" Neo1973 ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) fonctionne sous Openmoko Linux ==
-{{Note|Catte page concerne la révision [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]] du Neo1973 prévu pour début 2008. Pour la version précédente, voir [[IPhone_(GTA01)]]}}
+{{Note|Cette page concerne la révision [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]] aussi nommée Neo FreeRunner. Pour la version précédente, voir [[IPhone_(GTA01)]]}}
 Apple a annoncé son [http://www.apple.com/iphone/technology/specs.html iPhone] au MacWorld 2007. Il est quelque peu comparable au [http://lists.openmoko.org/pipermail/community/2007-January/001006.html Neo1973 FIC] annoncé à la fin de l'année 2006.
 
 Demonstration de l'interface utilisateur de l'iPhone sur youtube http://youtube.com/watch?v=YgW7or1TuFk
