--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -13,7 +13,7 @@ Compared to 2007.2 that has a longer development history, Om 2008.8 is definitel
 
 The main user-visible changes:
 
-* The user interface has been fully revised with a new windows manager [[illume]]. It is visually much richer, and can be customized further by using your own [[Edje]] files.
+* The user interface has been fully revised with a new window manager [[illume]]. It is visually much richer, and can be customized further by using your own [[Edje]] files.
 * '''[[Om2008.8_Installer|A graphical installer]]''' allows to add easily new applications, themes and functionality.
 * A new [[Om2008.8_Locations|Locations]] application is provided, to save your favorite spots and share them with friends via sms.
 * Power management has been improved: The Aux button now locks the screen, the Power button suspends and the red LED behind the Aux button lights up when charging.
