*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -28,10 +28,6 @@ Diese Tabelle darf gerne noch ergänzt werden ;) Ich denke 3-4 Leute wären opti
 ===Group Sales===
 [[GroupSales#Switzerland]]
 
-===Distributors===
-If you are interested in getting an Openmoko in your post box, drop me a mail at jec at jesc dot ch . I'm making a grouped order for Switzerland people.
-
-Website: http://www.jesc.ch/openmoko
 
 == Users in Switzerland ==
 *[[User:C7|C7]]
@@ -56,5 +52,6 @@ Website: http://www.jesc.ch/openmoko
 *[[User:claude-elrond740|claude-elrond740]]
 *[[User:DrYak|DrYak]]
 *[[User:bernulli|bernulli]]
+*[[User:jecuendet|jecuendet]]
 
 [[Category:Openmoko Local Groups]]
