--- a/Openmoko_Local_Groups:_Madrid.mw
+++ b/Openmoko_Local_Groups:_Madrid.mw
@@ -42,7 +42,7 @@ Una lista de las gentes que formamos parte de la comunidad de Openmoko en Madrid
 |[[User:Ieepa2|Ieepa2]]
 | empezando a programar,hardware
 | desearia ver andar el ver movil libre, a pleno rendimiento, compitiendo a los sistemas 
-| propietarios
+propietarios
 | Gipuzkoa
 | [[Image: Moko.jpg|center]]
 | No
