--- a/Openmoko_Local_Groups:_Madrid.mw
+++ b/Openmoko_Local_Groups:_Madrid.mw
@@ -44,7 +44,7 @@ Una lista de las gentes que formamos parte de la comunidad de Openmoko en Madrid
 | desearia ver andar el ver movil libre, a pleno rendimiento, compitiendo a los sistemas 
 propietarios
 | Gipuzkoa
-| [[Image: Yoko.jpg|center]]
+| [[Image: Moko.jpg|center]]
 | No
 | 
 |-
