/* Perspectives for long-term resolution */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -44,3 +44,5 @@ PS: Complaining that management does not listen to the users needs is not a prod
 == Perspectives for long-term resolution ==
 
 On August 27th 2008, Openmoko inc. announced its intention to focus on the low-level layers. Future "base system" distribution may not include any phone stack at all.
+
+Were did you get this from? I can't find the source. [[User:Dolfje|Dolfje]] 17:05, 27 August 2008 (UTC)
