/* Sandbox - Test page for Wiki editing */ Cleanup

--- a/Sandbox.mw
+++ b/Sandbox.mw
@@ -2,6 +2,6 @@
 
 '''Please leave this intro and edit below the line.'''
 
-Feel free to use this article to try formatting, editing or whatever related. It's better to use the common Sandbox for this, so testing won't appear in the pages' history.
+Feel free to use this article to try formatting, editing or whatever related. Don't worry, someone will clean up after you.
 
 ----
