*Empty MediaWiki Message*

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -62,6 +62,14 @@ http://lists.openmoko.org/mailman/listinfo/gsmd-devel
 
 Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.gsmd
 
+==== hardware@lists.openmoko.org ====
+
+This is a mailinglist on Openmoko hardware development: digital, RF, schematics.
+
+http://lists.openmoko.org/mailman/listinfo/hardware
+
+Gmane: http://news.gmane.org/gmane.comp.handhelds.openmoko.hardware
+
 ==== openmoko-apps@lists.openmoko.org ====
 '''NOTE: This mailing list has been closed. Discussion should continue on openmoko-devel.'''
 
