Link to sandbox

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -2,6 +2,8 @@ The Openmoko Wiki is open. YOU can edit its content.
 
 People usually start editing a wiki by fixing small things, like obvious grammar and style mistakes. If you spot one, click on the '''edit''' tab, [http://wiki.openmoko.org/index.php?title=Special:Userlogin&type=signup register] by creating an account on the wiki, and you are set up to share and help others.
 
+If you are extra cautious or want to get familliar with the system, go to the [[Sandbox]] page. The [[Sandbox]] page is here for everybody to play in !
+
 Then some people move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. Don't worry about being incomplete or about fine-tuning the language. Wiki means "fast" in Hawaïan, so if you have any information to share, go for it !
 
 ==Tips for advanced wiki editors==
