Added not on defaul arcmin / pixel scale

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -16,7 +16,9 @@ being displayed.   Orbital elements are used,
 rather than ephemerides, to calculate planet positions.   Although
 this is less accurate, it drastically reduces the memory
 footprint.   The planet positions are accurate to a few arc
-minutes, from 3000 BC to 3000 AD.
+minutes, from 3000 BC to 3000 AD.  Since the scale
+on the default display is approximately 8 arc minutes
+per pixel, these small errors are imperceptible.
 
 Although the screen grabs shown on this page are from the OM 2007.2
 stack, the program definitely works for both 2007.2 and 2008.8, and
