Quantified the size distortion of the Sun and Moon

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -36,7 +36,7 @@ well with the VGA aspect ratio in portrait mode.
 It's a conformal transformation, so the
 constellations have about the right shapes.  The Sun, Moon and planets are
 plotted, and the Moon is shown with the proper phase.   The Sun and Moon are
-plotted with a size much larger than their true angular size on
+plotted with a size about 3.5 times larger than their true angular size on
 the sky.
 
 === The orrery as a compass ===
