Added symbol subcategories

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -20,11 +20,6 @@ minutes, from 3000 BC to 3000 AD.  Since the scale
 on the default display is approximately 8 arc minutes
 per pixel, these small errors are imperceptible.
 
-Although the screen grabs shown on this page are from the OM 2007.2
-stack, the program definitely works for both 2007.2 and 2008.8, and
-probably works for FSO.   It works on both the gta01 and gta02.  It
-is gtk based.
-
 == The Display ==
 
 [[Image:OrreryWithMenuTabs.png|Orrery with Menu Tabs]]
@@ -114,11 +109,13 @@ such things as the lowest magnitude displayed, constellation
 lines, whether or not star names are displayed, etc.
 
 == Symbols ==
+=== Planet Symbols ===
 The solar system symbols, used by default on the constellation
 page (screen two), are the standard astronomical symbols for these
 objects.   They are explained here:
 [http://en.wikipedia.org/wiki/Planet_symbols]
 
+=== Plotted Lines ===
 The dotted yellow line is the Celestial Equator, the intersection of
 the Earth's equatorial plane with the celestial sphere.   The red
 dotted line is the Ecliptic.   The Ecliptic is the intersection
@@ -133,6 +130,19 @@ the Galactic Plane, the intersection of the plane of the Milky Way's
 disk and the celestial sphere.
 
 == System Requirements ==
+=== Supported Phones ===
+This program will run on either the neo1973 (gta01)
+or the Freerunner (gta02).   Users of the neo1973
+may wish to move the files to the microSD card, to
+save space in the limited builtin FLASH memory
+(see below).
+
+=== Supported Software Stacks ===
+This program has been tested running atop the
+2007.2 and 2008.8 distributions.   It probably will
+work with FSO too.  It is gtk based.
+
+=== Memory Requirements === 
 This program requires 630 kbytes of storage space in the phone's
 builtin flash storage or microSD card.   By default, most of
 the files (everything except the .desktop file, the launch
