/* added discussion of charge rates, and how to manually set charge rate */

--- a/USB_host.mw
+++ b/USB_host.mw
@@ -39,6 +39,10 @@ Set to 1, provides up to 500mA USB power at the USB port (FreeRunner only), disa
 
 Next, power must somehow be injected. An unmodified powered USB hub only provides power to the connected devices, but not to the connected host, so the only solution here is to modify a USB-hub¹) or to create a custom cable which will inject power into the host.
 
+Finally, there is the question of charge rate. The charging logic in the Neo will only charge at 100mA by default. Charging at 500mA will take place only if the charging device responds appropriatly to USB negotiation to increase power consumption. Charging at 1000mA will only take place if the Neo detects the appropriate resistor on the ID pins.
+
+You can manually set the charge rate. See [[Forcing_fast_charge_mode]]
+
 ¹) often it's sufficient to short a diode in USB-hub to feed power to the host-connector too.
 
 === Modified USB cable to inject power while in host mode ===
