--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -12,7 +12,7 @@ Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primar
 
 The [[Om2008.8_Keyboard|Qtopia keyboard]] build-in Om 2008.8. See also the [[http://doc.trolltech.com/qtopia4.3/inputmethods-description.html documentation at Trolltech]]
 
-The [[Switching_Keyboards_on_OM_2007.2|matchbox keyboard]].
+The [[Switching_Keyboards_on_OM_2007.2#What_does_the_keyboard_look_like.3F|matchbox keyboard]].
 
 The illume virtual keyboard a.k.a. Raster's keyboard.
 
