/* List of available keyboards */ Adding the qtopia screenshots

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -10,11 +10,21 @@ Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primar
 
 == List of available keyboards ==
 
+=== Qtopia keyboard ===
+
 The [[Om2008.8_Keyboard|Qtopia keyboard]] build-in Om 2008.8. See also the [[http://doc.trolltech.com/qtopia4.3/inputmethods-description.html documentation at Trolltech]]
+
+[[Image:asu_keyboard_lower.png|none|thumb|250px|ASU Keyboard]] [[Image:asu_keyboard_word.png|none|thumb|250px|ASU Keyboard with hello]] [[Image:asu_keyboard_numeric.png|none|thumb|250px|ASU Keyboard with numeric keys]]
+
+=== Matchbox keyboard ===
 
 The [[Switching_Keyboards_on_OM_2007.2#What_does_the_keyboard_look_like.3F|matchbox keyboard]]. [[Image:Complete_QWERTY_Keyboard_On_The_Freerunner_screenshot.png|none|thumb|260px|Screenshot of the keyboard applet]]
 
+=== Illume keyboard ===
+
 The illume virtual keyboard a.k.a. Raster's keyboard.
+
+=== Vkbd system ===
 
 The vkbd system.
 
