--- a/Debian.mw
+++ b/Debian.mw
@@ -79,7 +79,7 @@ There is also a module missing from /etc/modules, which is critical to getting y
  # echo ohci-hcd >> /etc/modules
 
 The first time you try this, you can also
- # modprobe ochi-hcd
+ # modprobe ohci-hcd
 
 The only atypical part of using bluetooth on the Freerunner is turning it on, which can be done with
  # echo 1 > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on
