--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -24,6 +24,8 @@ The [[Switching_Keyboards_on_OM_2007.2#What_does_the_keyboard_look_like.3F|match
 
 The illume virtual keyboard a.k.a. Raster's keyboard.
 
+Probably [http://monochromementality.com/data/phoo/2008_08_05/medium/Screenshot-9.png looking like this]
+
 === Vkbd system ===
 
 The vkbd system.
