--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -26,6 +26,8 @@ The illume virtual keyboard a.k.a. Raster's keyboard.
 
 Probably [http://monochromementality.com/data/phoo/2008_08_05/medium/Screenshot-9.png looking like this]
 
+See also [[Illume#Virtual_Keyboard]] (which would need to be completed ;)
+
 === Vkbd system ===
 
 The vkbd system.
