/* Your short-term options */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -51,7 +51,7 @@ How to turn off Qtopia keyboard ? According to [http://docs.openmoko.org/trac/ti
 
 * Live with it, let go (for a while) the desire to use the terminal locally, login remotely via ssh when you need.
 * Get an external keyboard, USB or Bluetooth, light and foldable if you want.
-* Switch to 2007.2, FSO or Debian.
+* Switch to 2007.2 (but then similar issues arise : [[Switching Keyboards on Om 2007.2]]), FSO or Debian.
 * Recompile Qtopia and provide a package.
 PS: Complaining that management does not listen to the users needs is not a productive option.
 
