/* List of keyboard-related Howtos */ Adding link to toggle

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -36,7 +36,7 @@ The vkbd system.
 
 [[Om_2008.8_Keyboard| How to use the Qtopia keyboard]] shipped with Om 2008.8 ?
 
-How to have a toggle button to make the keyboard appear/disappear ?
+How to have a toggle button to make the keyboard appear/disappear ? ([[Keyboard Toggle|here ?]])
 
 How to change the keyboards layout ?
 
