/* Running on the desktop */

--- a/Tichy.mw
+++ b/Tichy.mw
@@ -80,7 +80,11 @@ The sources can be found from svn repository on project.openmoko :
 == Running on the desktop ==
 Thanks to the service system, that allows to provide several version of the same service, Tichy can run as well on a desktop computer as on the neo. When run on a desktop, tichy will simulate phone functionalities, when run on the neo, it will use the [[OpenmokoFramework | Framework]].
 
-To run it on the desktop, just download the sources, then go into test, and run 
+
+To run it on the desktop, make sure you have python-pygames installed
+  sudo apt-get install python-pygames
+
+Then just download the sources, then go into test, and run 
  ./tichy
 
 == Running on neo ==
