--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -111,9 +111,11 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 * Usb-networking will not work until rebooted after initial boot.
 
 '''Usability''' 
+
 * The Pin-Dialog by default just shows letters. You have to slide your finger up/down over the keyboard to make the numbers/uppercase/special characters appear.
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Solution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Alternate Solution: On the FreeRunner, use the drop-down menu to close all open applications.
+* The keyboard may not be adapted for all uses. See [[Keyboard Debate]] for a full discussion and options.
 
 == Official updates for "stable" Om 2008.8 ==
 
