/* Lists now implemented as categories */ User cagegory too general.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -127,7 +127,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 
 ===Lists now implemented as categories===
 These Pages are now implemented as categories, thus the unmaintaned pages could be removed. - Kempelen
-* [[Advanced_End-user]]: use [[:Category:User]] instead
+* [[Advanced_End-user]]: use [[:Category:User]] instead (Actually User is a too general name, thus new one should be created maybe [[User:Kempelen|Kempelen]])
 * [[Basic_End-user]]: use [[:Category:User]] instead
 * [[System_Developer]]: use [[:Category:System_Developers]] instead
 * [[Application_Developer]]: use [[:Category:Application_Developer]] instead
