--- a/Biking.mw
+++ b/Biking.mw
@@ -6,6 +6,8 @@ André Gaul documented a complete mounting kit [http://andre.web-yard.de/blog/20
 
 It's just a prototype :) but with some foam around the handlebar and careful positioning to avoid bumps, a basic attachment like this might work [http://www.xmission.com/~bmidgley/neobike.jpg] and makes it easy to "pinch" the screen when you need to finger tap something.
 
+[http://www.rabenfrost.net/openmoko/bikemount/ Images of an interesting bike mount]
+
 == Power Supply ==
 === Crank up the charge ===
 
@@ -36,9 +38,11 @@ Linear regulator above might be replaced with [http://www.dimensionengineering.c
 * [[TangoGPS]], + [http://blogs.thehumanjourney.net/finds/entry/20080826 OSM Cycle data]
 * [[Navit]]
 * [http://wiki.openstreetmap.org/index.php/Rana Rana] uses [[Installing Pyroute|Pyroute]]
+* [http://www.neo1973-germany.de/wiki/pylgrim pylgrim] bitmap map viewer. Dead.
 
 == See also ==
 
 * http://wiki.openmoko.org/wiki/GPS_applications
+* http://www.obico.de An open bicycle linux computer - seems to be alive, but nothing there yet. 
 
 [[Category:Technical]]
