--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -536,7 +536,7 @@ Status : 18/19
 * [[User:chansen|Cyril Hansen]]
 * Titilambert ([http://wiki.openmoko.org/wiki/Special:Emailuser/titilambert Contact me here])
 * [[User:Raphux|Raphux]]([http://wiki.openmoko.org/wiki/Special:Emailuser/Raphux Contact me here])
-* [[User:kkum|Kumar]] (contact me [[Special:Emailuser/kkum|here]])
+* <s>[[User:kkum|Kumar]]</s> (''commandé sur http://bearstech.com/shop'')
 * Gand' ([http://wiki.openmoko.org/wiki/Special:Emailuser/Gand' Contact me here])
 * [[User:Sporniket|David SPORN]]
 * [[User:Bedo|Bedo]]
