/* Om 2008.8 (ASU, April/August Software Update) */ Mentioning "ASU-stable"

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -50,6 +50,8 @@ thus patches are still welcome, especially if they help development of SHR.
 
 Om 2008.8 has been started to integrate the [http://trolltech.com/products/qtopia Qtopia] stack - on X11 - with a new set of graphically pleasing applications based on the Enlightenment Foundation Libraries. ASU is the internal name and is known as Om 2008.8 upon its release on August 8, 2008.  Qtopia is a more mature product than the GNOME Mobile stack and you can expect all the standard feature phone applications to work in a solid way. It uses the Qtopia phone server. Since - contrary to standard Qtopia - it does not directly use the framebuffer, non-Qt applications can safely share the screen with Qt applications.
 
+Om 2008.8 is maintained as "'''ASU-stable'''" with continuous updates. 
+
 * [[Om2008.8|Om 2008.8]]
 * [[Downloads#Openmoko_2008.8_images_.28ASU.29|Download]]
 
