/* Lists now implemented as categories */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -131,6 +131,7 @@ These Pages are now implemented as categories, thus the unmaintaned pages could 
 * [[Basic_End-user]]: use [[:Category:User]] instead
 * [[System_Developer]]: use [[:Category:System_Developers]] instead
 * [[Application_Developer]]: use [[:Category:Application_Developer]] instead
+Note that as a matter of principle, lists and categories are two complementary ways to organize information. We should strive to have both excellent lists AND categories in the wiki.
 
 ===Too general category names===
 
