--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -344,6 +344,8 @@ fido
 |-
 | Norway || Telenor || Any || telenor || ||
 |-
+| Spain   || Simyo     || Any  || gprs-service.com / *99# ||  ||
+|-
 | Sweden || Parlino ||  || internet.parlino.se || || [[GPRS_FSO|Works with FSO]]
 |-
 | Switzerland || Swisscom || e.g. Natel Basic Liberty, behind NAT || gprs.swisscom.ch || ||
