/* Pulster.de order (already ordered and on their way!) */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2864,6 +2864,8 @@ Status : 10/10 -> full <br />
 
 '''Organising the next 10Pack'''
 
+'''I ordered the 10pack. Delivery is in mid september (plus shipping to Zurich.)'''
+
 I  will organice the next 10pack as soon as this list is full. You may Pick up the Phone at the ETH Zürich (money: exact amount in cash or directly to my bank-account in advance) or I will send it to you (money: directly to my bank-account in advance including the Porto). The other conditions are the same as above. (Joerg Maeder/Goergel)
 * Joerg Maeder (Opfikon) <br />  [http://wiki.openmoko.org/wiki/Special:Emailuser/goergel Contact]
 * Silvio Heuberger (Lachen)<br/> Will pick up on Polyterrasse, pay cash [http://wiki.openmoko.org/wiki/Special:Emailuser/kungfoo Contact]
