*Empty MediaWiki Message*

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -54,7 +54,7 @@ If you have problems with illume crashing, make sure that you don't have a copy 
 
 == Predictive mode ==
 
-To turn off predictive mode just put ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into  ''/etc/X11/Xsession.d/89Qtopia''
+To turn off predictive mode just put ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into  ''/etc/X11/Xsession.d/89qtopia''
 
 
 == Debate ==
