*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Bern.mw
+++ b/Openmoko_Local_Groups:_Bern.mw
@@ -25,7 +25,14 @@
 |[[Image: MokoBox.jpg|center]]
 |
 |-
-|...
+|André Roth
+|
+|
+|Biel/Bienne
+|[[Image: Moko.jpg|center]]
+|[[Image: MokoBox.jpg|center]]
+|
+|-|...
 |
 |
 |
