*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Bern.mw
+++ b/Openmoko_Local_Groups:_Bern.mw
@@ -29,8 +29,8 @@
 |
 |
 |Biel/Bienne
-|[[Image: Moko.jpg|center]]
-|[[Image: MokoBox.jpg|center]]
+|[[Image: Moko.jpg|center](freerunner)]
+|
 |
 |-|...
 |
