Note that the charger has more capacity than the maximum charge rate

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -65,9 +65,11 @@ Some Frequently Asked Questions for new owners are featured in the [[Getting Sta
 
 ===Charging the Neo FreeRunner===
 
-Before using the Neo FreeRunner for the first time, you should charge the battery completely. The battery can be charged using the provided charger (at 1000mA) or from a powered USB port capable of providing 500mA worth of current. Most computers will be able to charge the FreeRunner without any problems.
+Before using the Neo FreeRunner for the first time, you should charge the battery completely. The battery can be charged using the provided charger at 1000mA or from a powered USB port capable of providing 500mA worth of current. Most computers will be able to charge the FreeRunner without any problems.
 
-(Note: the provided charger includes three "national" plugs. The default is
+(Note 1: Although the provided charger is rated at 2A, the maximum charge rate of the Neo Freerunner is 1A, and thus the charge rate is less than the charger capacity.)
+
+(Note 2: the provided charger includes three "national" plugs. The default is
 North America, with alternative U.K (3 square pins) and Euro (two round pins) adapters.
 To install the alternative power adapters, depress the latch in the cover
 (on the opposite side of the charger from the product information label)
