--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -10,23 +10,22 @@ The FreeRunner can be purchased from the [http://www.openmoko.com Online Store] 
 
 == Specifications ==
 
-* A very high resolution touch screen (1.7" x 2.27" - 43mm x 58mm) 480x640 pixels
-* 128MB SDRAM memory to allow operation of many applications at once
-* Internal [[Neo FreeRunner GPS|GPS]] module for map and tracking programs
-* Bluetooth for local data exchange
-* 802.11 b/g [[Neo FreeRunner Wifi|WiFi]] for fast web browsing and data transfer
-* A 400Mhz processor
+* Very high resolution touch screen (1.7" x 2.27" - 43mm x 58mm) 480x640 pixels
+* 128MB SDRAM memory
+* Internal [[Neo FreeRunner GPS|GPS]] module
+* Bluetooth
+* 802.11 b/g [[Neo FreeRunner Wifi|WiFi]]
+* 400Mhz ARM processor
 * 2 3D accelerometers so that the phone can know its orientation for example switching to landscape mode automatically
 * 2 LEDs illuminating the two buttons on the rim of the case (one bi color [blue|orange] behind the power button, 1 uni color [red] behind the aux button)
-* Tri-band GSM and GPRS for North America (850/1800/1900 Mhz) and the rest of the world (900/1800/1900 Mhz)
+* Tri-band GSM and GPRS 
 * USB Host function with 500mA power allowing you to power USB devices for short periods (will drain the FreeRunner battery faster)
 
-'''Beware''': There are two versions of the phone. One that work on GSM bands of North America and on that will work on the bands in the rest of the world. Beware that The Neo FreeRunner bought from a reseller in Europe will most likely not work in North America. And vice versa.
+'''Versions''': The Neo FreeRunner is available in two versions, one for the GSM bands of North America (850/1800/1900 Mhz), and one for the GSM bands in the rest of the world (900/1800/1900 Mhz). Unless you explicitly discuss this, a local reseller may by default send you the version appropriate to the distributors location.
 
-A full list of the hardware specs and components of the Neo FreeRunner (internal codename [[GTA02 revisions|GTA02]]) can be found at [[Neo FreeRunner GTA02 Hardware]].
+A full list of the hardware specs and components of the Neo FreeRunner can be found at [[Neo FreeRunner Hardware]].
 
 A comparison between [[Neo 1973]] and Neo FreeRunner is available at [[Neo 1973 vs Neo FreeRunner]].
-
 
 == What is the price? ==
 
