*Empty MediaWiki Message*

--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -1,7 +1,7 @@
 {{Languages|Neo FreeRunner GTA02 Hardware}}
 {{gta02menu}}
 
-This is the detailed list of the hardware components used in Neo FreeRunner (development codename GTA02), Openmoko Inc.'s second smartphone. Here you will not find differences between various [[GTA02 revisions]].
+This is the detailed list of the hardware components used in Neo FreeRunner (development codename GTA02), Openmoko Inc.'s second smartphone. (Differences between various [[GTA02 revisions]]).
 
 If you are looking for general hardware overview please look at the [[Neo FreeRunner]] page.
 
