--- a/Smedia_Glamo_3362.mw
+++ b/Smedia_Glamo_3362.mw
@@ -9,7 +9,7 @@
 * Driver: Check svn for the SMedia driver with SD implementation
 * [[Supported microSD cards]]
 * Specifications: [http://www.sdcard.org/about/memory_card/pls/ SD Simplified Specification], [http://www.mmca.org/compliance/buy_spec/AN_MMCA050419.pdf MMC (partial)], [http://www.sandisk.com/Assets/File/OEM/Manuals/manual-rs-mmcv1.0.pdf MMC (product manual)]
-* SANDISK 128 MB/512 MB and some 4G SDHC card been verified could work on GTA02<br>
+* SANDISK 128 MB/512 MB and some 4G SDHC cards have been verified to work on GTA02<br>
 
 ==Neo FreeRunner==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
