*Empty MediaWiki Message*

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -2,7 +2,7 @@ There are a plethora of Transflash / microSD cards out there.
 
 Earlier, Sandisk cards were recommended, since they seemed to cause the least amount of trouble.
 
-There has been a [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=677 bug] in the SD device driver (s3cmci) which caused some troubles. Please make sure you use a recent kernel which applies our kernel patchset rev2832 or higher.
+There had been a [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=677 bug] in the SD device driver (s3cmci) which caused some troubles. Please make sure you use a recent kernel which applies our kernel patchset rev2832 or higher.
 
 Booting from SDHC requires a u-boot from 2008-07-23 or later.
 
