--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -20,6 +20,7 @@ The FreeRunner can be purchased from the [http://www.openmoko.com Online Store] 
 * 2 LEDs illuminating the two buttons on the rim of the case (one bi color [blue|orange] behind the power button, 1 uni color [red] behind the aux button)
 * Tri-band GSM and GPRS 
 * USB Host function with 500mA power allowing you to power USB devices for short periods (will drain the FreeRunner battery faster)
+* uSD slot supporting up to 8GB SDHC (Secure Digital High Capacity) cards
 
 '''Versions''': The Neo FreeRunner is available in two versions, one for the GSM bands of North America (850/1800/1900 Mhz), and one for the GSM bands in the rest of the world (900/1800/1900 Mhz). Unless you explicitly discuss this, a local reseller may by default send you the version appropriate to the distributors location.
 
