*Empty MediaWiki Message*

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -1,12 +1,14 @@
+The Neo FreeRunner supports up to 8GB SDHC (Secure Digital High Capacity) cards. 
+
 There are a plethora of Transflash / microSD cards out there.
 
-Earlier, Sandisk cards were recommended, since they seemed to cause the least amount of trouble.
-
-There had been a [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=677 bug] in the SD device driver (s3cmci) which caused some troubles. Please make sure you use a recent kernel which applies our kernel patchset rev2832 or higher.
+There had been a [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=677 bug] in the SD device driver (s3cmci) which caused some trouble. Please make sure you use a recent kernel which applies our kernel patchset rev2832 or higher.
 
 Booting from SDHC requires a u-boot from 2008-07-23 or later.
 
 Note that most vendors are using an irritating way of labeling the capacity of their cards (They are using the factor 1000 instead of 1024 for KB and MB). Therefore the real capacity of these cards will be about 5% less than the vendor's specification. For example, cards labelled ''6 GB'' will only have 5.7 GB of storage capacity.
+
+If you use a card not listed here, please add to this table.
 
 == Cards by Vendor ==
 {| border=1 |
