/* Poor Audio Quality */ Link to a couple of recent hardware-ML posts

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -17,7 +17,11 @@ There are three related aspects to this issue:
 
 Affects: all devices but only some users (depending on many factors)
 
-Status: Under investigation. There is a possibility that the quality can be made "good enough" through software (mixer settings). 
+Status: Under investigation. There is a possibility that the quality can be made "good enough" through software (mixer settings).
+
+The source of the GSM buzz has been [http://lists.openmoko.org/pipermail/hardware/2008-August/000415.html identified].
+
+Some [http://lists.openmoko.org/pipermail/hardware/2008-August/000451.html hidden Calypso commands] may help with the echo problem.
 
 Workarounds: Using a bluetooth headset is a possibility. 
 
